--- a/FrontEnd/src/app/employe/employe.component.html
+++ b/FrontEnd/src/app/employe/employe.component.html
@@ -1,6 +1,8 @@
 <h2 class="text-primary text-center">Employee List</h2>
 <button class="btn btn-primary p-2 m-2" data-toggle="modal" data-target="#newmodal" > 
     <li class="fa fa-plus"></li> Add/Employe</button>
+
+  
 <div class="p-2 m-2">
 <table class="table table-bordered table-stripe">
 <thead>
@@ -18,13 +20,15 @@
     <td>{{emp.name}}</td>
     <td>{{emp.address}}</td>
     <td>{{emp.email}}</td>
-    <td>{{emp.picture}}</td>
+    <td>
+      <img [src]="emp.picture" height="100" >
+    </td>
 
     <td>
       <button  class="btn btn-info m-1 " (click)="EditClick(emp)" data-toggle="modal" data-target="#Edit">
         <li class="fa fa-edit"></li>
       </button>
-      <button class="btn btn-danger"  (click)="deleteclick(emp.id)" >
+      <button class="btn btn-danger"  (click)="DeleteClick(emp.id)" >
         <li class="fa fa-trash"></li>
       </button>
     </td>
@@ -67,9 +71,12 @@
         <div class="form-group row">
           <label for="pict" class="col-sm-4" >Picture</label>
           <div class="col-sm-8">
-  <input id="pict" type="file" [(ngModel)]="NewEmploye.picture" name="Files" accept=".jpg" (change)="onFileSelected($event)" class="form-control"/>
+           
+  <input id="pict" type="file" alt="NewEmploye.picture" [(ngModel)]="NewEmploye.picture"  name="Files" accept=".jpg" (change)="onselected($event)" class="form-control"/>
+   <img [src]="url"  height="50" />
           </div>
           </div>
+       
         
   
         
@@ -82,47 +89,62 @@
     </div>
   </div>
 
+
+
+
   
-  <div class="modal" tabindex="-1" role="dialog" id="Edit" >
+ 
+
+
+<!-- //Edit  -->
+  <div class="modal" tabindex="-1" role="dialog" id="Edit">
     <div class="modal-dialog" role="document">
-      
-      <div class="modal-content row">
-        <div class="modal-header col-sm-8">
-          <h5 class="modal-title">Update Employe</h5>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">update Employe</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span>&times;</span>
           </button>
         </div>
         <div class="modal-body">
         <div class="form-group row">
-      
-        
         <label for="name" class="col-sm-4" >Name</label>
         <div class="col-sm-8">
-<input id="name" [(ngModel)]="EditEmploye.name" type="text" name="name" placeholder="Enter your Name" class="form-control"/>
+<input id="name"  type="text" [(ngModel)]="EditEmploye.name" name="name" placeholder="Enter your Name" class="form-control"/>
         </div>
         </div>
         <div class="form-group row">
         <label for="Address" class="col-sm-4" >Address</label>
         <div class="col-sm-8">
-<input id="Address" type="text" [(ngModel)]="EditEmploye.address" name="address" placeholder="Enter your Address" class="form-control"/>
+<input id="Address" type="text" [(ngModel)]="EditEmploye.address"  name="address" placeholder="Enter your Address" class="form-control"/>
         </div>
         </div>
         <div class="form-group row">
         <label for="salary" class="col-sm-4" >Email</label>
         <div class="col-sm-8">
-<input id="salary" type="text" [(ngModel)]="EditEmploye.email" name="email" placeholder="Enter your Sallary" class="form-control"/>
+<input id="salary"  type="text" [(ngModel)]="EditEmploye.email" name="email" placeholder="Enter your Sallary" class="form-control"/>
         </div>
         </div>
-        
-        <div class="row ">
+          <div class="form-group row">
+          <label for="pict" class="col-sm-4" >Picture</label>
+          <div class="col-sm-8">
+           
+  <input id="pict" type="file"  [(ngModel)]="EditEmploye.picture"    height="50"  name="Files" accept=".jpg" (change)="onselected($event)" class="form-control"/>
+  
+    <img [src]="EditEmploye.picture"  height="50" />
+  
+   
+          </div>
+          </div>
+      
+        </div>
         <div class="modal-footer">
-          <button type="button" (click)="update()"   data-dismiss="modal" class="btn btn-primary">update </button>
+          <button  type="button" (click)="Update()"   data-dismiss="modal" class="btn btn-primary">Update </button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
-  </div>
+</div>
 
 
- 
+
